syntax = "proto3";

package protobuf;

option go_package = "example/grpc/internal/controller/rpc/protobuf";

import "author.proto";
import "book.proto";
import "common.proto";


service AppService {
    // authors service
    rpc GetAuthors (QueryRequest) returns (stream Author) {}
    rpc CreateAuthor (CreateAuthorRequest) returns (Author) {}
    rpc UpdateAuthor (UpdateAuthorRequest) returns (Author) {}
    rpc DeleteAuthor (Id) returns (Empty) {}
    rpc GetAuthor (Id) returns (Author) {}
    // books service
    rpc GetBooks (QueryRequest) returns (stream Book) {}
    rpc CreateBook (CreateBookRequest) returns (Book) {}
    rpc UpdateBook (UpdateBookRequest) returns (Book) {}
    rpc DeleteBook (Id) returns (Empty) {}
    rpc GetBook  (Id) returns (Book) {}
}
